# CLI-Orchestrator

./: .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
prompts/: default_system.md
src/orchestrator/: __init__.py  agent_runner.py  config.py  git_ops.py  issue_monitor.py  logger.py  main.py  pr_manager.py  sandbox.py  trigger.py  webhook_server.py
src/orchestrator/github/: issue_monitor.py  pr_manager.py  webhook_server.py
src/orchestrator/sandbox/: agent_runner.py  sandbox.py
tests/: __init__.py  test_agent_runner.py  test_check_keys.py  test_issue_monitor.py  test_webhook_server.py
