[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator"
version = "0.1.0"
description = "GitHub Issue → PR 自動化 Orchestrator (OpenCode + Docker Sandbox)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyGithub>=2.0",
    "docker>=7.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "GitPython>=3.1",
    "structlog>=24.0",
    "click>=8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
orchestrator = "orchestrator.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-PyYAML",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
